<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <!-- This is a generic layout for any activity that just needs to display a large textview. No need
    to have multiple layouts doing the same job, and this way if we want to change the design we can just
    change it once and it'll affect all of them. -->

    <TextView
        android:visibility="invisible"
        android:id="@+id/gol_explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_of_life_explanation"
        android:maxLines="9999"
        android:scrollbars = "vertical"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:visibility="invisible"
        android:id="@+id/aboutThisAppTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_this_app_text"
        android:maxLines="9999"
        android:scrollbars = "vertical"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:visibility="invisible"
        android:id="@+id/do_you_code_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/do_you_code_text"
        android:maxLines="9999"
        android:scrollbars = "vertical"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:visibility="invisible"
        android:id="@+id/attribution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/attribution_text"
        android:maxLines="9999"
        android:scrollbars = "vertical"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
