<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/game_screen_parent"
    tools:context="com.heslihop.wesley.gameoflife.GameScreen">

       <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/animationSurfaceViewsLayout"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

        </FrameLayout>

    <ImageView
        android:id="@+id/backgroundIV"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:background="@android:color/black"
        tools:layout_editor_absoluteY="-51dp"
        tools:layout_editor_absoluteX="-86dp" />

    <ImageButton
        android:id="@+id/Pause"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="pauseButton"
        android:translationZ="1dp"
        android:background="@drawable/pause"
        app:layout_constraintRight_toLeftOf="@+id/AdvanceOne"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/clearButton"
        app:layout_constraintTop_toTopOf="@+id/top_of_bottom_row"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/AdvanceOne"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="false"
        android:onClick="advanceOneButton"
        android:translationZ="1dp"
        android:background="@drawable/plus_one"
        app:layout_constraintRight_toLeftOf="@+id/randomButton"
        app:layout_constraintLeft_toRightOf="@+id/Pause"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top_of_bottom_row"
        app:layout_constraintDimensionRatio="w,1:1" />

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/settings"
        android:onClick="settingsButton"
        android:translationZ="1dp"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom_of_top_row"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginRight="0dp" />

    <ImageButton
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@mipmap/save"
        android:onClick="onSaveButton"
        android:translationZ="1dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/settingsButton"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintBottom_toTopOf="@+id/bottom_of_top_row" />

    <ImageButton
        android:id="@+id/clearButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/garbage"
        android:onClick="clearButton"
        android:translationZ="1dp"
        app:layout_constraintRight_toLeftOf="@+id/Pause"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top_of_bottom_row"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/randomButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/explosion"
        android:onClick="randomizeButton"
        android:translationZ="1dp"
        app:layout_constraintLeft_toRightOf="@+id/AdvanceOne"
        app:layout_constraintTop_toTopOf="@+id/top_of_bottom_row"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintRight_toLeftOf="@+id/BacteriaHideButton"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/BacteriaHideButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/green_bacteria2"
        android:translationZ="1dp"
        android:onClick="showHideGUI"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/randomButton"
        app:layout_constraintTop_toTopOf="@+id/top_of_bottom_row"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintVertical_bias="0.498" />

    <SeekBar
        android:id="@+id/speedSeekBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:max="30"
        android:maxHeight="100dp"
        android:minHeight="10dp"
        android:progress="10"
        android:translationZ="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/left_vertical_guideline"
        app:layout_constraintTop_toTopOf="@+id/top_of_second_bottom_row"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toTopOf="@+id/top_of_bottom_row"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <SeekBar
        android:id="@+id/sizeSeekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:max="4"
        android:maxHeight="100dp"
        android:minHeight="10dp"
        android:progress="2"
        android:translationZ="1dp"
        app:layout_constraintBottom_toTopOf="@+id/top_of_bottom_row"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top_of_second_bottom_row"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/right_vertical_guideline"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_of_top_row"
        app:layout_constraintGuide_percent="0.1"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="51dp"
        tools:layout_editor_absoluteX="0dp" />


    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/left_vertical_guideline"
        app:layout_constraintGuide_percent="0.43"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="165dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/right_vertical_guideline"
        app:layout_constraintGuide_percent="0.57"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="219dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/top_horizontal"
        app:layout_constraintGuide_percent="0.33"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="169dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_horizontal"
        app:layout_constraintGuide_percent="0.67"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="343dp"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:textColor="@color/white"
        android:id="@+id/speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed"
        android:translationZ="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/top_of_second_bottom_row"
        app:layout_constraintRight_toLeftOf="@+id/left_vertical_guideline" />

    <TextView
        android:textColor="@color/white"
        android:id="@+id/size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size"
        android:translationZ="1dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/top_of_second_bottom_row"
        app:layout_constraintLeft_toLeftOf="@+id/right_vertical_guideline" />

    <android.support.constraint.Guideline
        android:id="@+id/top_of_bottom_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9"
        tools:layout_editor_absoluteY="460dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:id="@+id/top_of_second_bottom_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"
        tools:layout_editor_absoluteY="409dp"
        tools:layout_editor_absoluteX="0dp" />

    <ImageButton
        android:id="@+id/redoButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/redo"
        android:onClick="redoButton"
        android:translationZ="1dp"
        app:layout_constraintTop_toTopOf="@+id/top_of_second_bottom_row"
        app:layout_constraintRight_toLeftOf="@+id/right_vertical_guideline"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintBottom_toTopOf="@+id/top_of_bottom_row"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@+id/left_vertical_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/deleteDatabase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete Database"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/redoButton"
        android:onClick="deleteDatabase" />

    <TextView
        android:textColor="@color/white"
        android:id="@+id/GenerationCount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:translationZ="1dp"
        android:text="@string/generations"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/left_vertical_guideline"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
